bugs: missing menu items from Account menu on Tablet

--- a/src/css/scss/_responsive/_responsive-navbar.scss
+++ b/src/css/scss/_responsive/_responsive-navbar.scss
@@ -506,6 +506,7 @@
 .nav-li-linkBtn {
   padding-right:7px;
 }
+
 // .nav-li-count{
 //   display:inline-block;
 //   padding:0 9px;
@@ -551,8 +552,16 @@
   margin-left: 25px;
 }
 
-.navmenu-w-account .navmenu-list-prefixed{
-  display:block;
+
+
+.navmenu-w-account .reveal-transition-container .navmenu-list-prefixed{
+  display: block;
+  border-bottom: solid 1px;
+  padding-bottom: 10px;
+}
+.navmenu-w-account .reveal-transition-container .navmenu-list-main{
+  padding-top: 6px;
+  padding-bottom: 4px;
 }
 .nav-wrapper:not(.nav-wrapper-minimal) .nav-li-favorites,
 .nav-li-cart{
@@ -952,6 +961,12 @@
   .reveal-transition-container{
     width:100%;
     padding-bottom:30px;
+
+    .btn-logout,
+    .btn-login{
+      font-size:px-em(12,15);
+      padding:14px 12px 15px;
+    }
 
     .btn-logout{
       margin-top:15px;
